# radiology-ai

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MVP-v7-spec.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  finding_request.md
config/: extraction_models.yaml  findings_cxr.yaml  label_mapping.yaml  tier2_synonyms.yaml
config/prompts/: extract_cxr_pt.txt
scripts/: 00_ingest.py  00b_generate_prompt.py  01_extract_labels.py  01a_validate_extractions.py  01b_compare_extractions.py  01c_discovery_report.py  02_build_ground_truth.py
src/cxr_mvp/: __init__.py  comparison.py  config.py  discovery.py  ingest.py  label_maps.py  models.py  prompt_generator.py  pt_rules.py  reference_labels.py  run_manifest.py  validation.py
src/cxr_mvp/backends/: __init__.py  base.py  mock_backend.py
src/cxr_mvp/extractors/: anthropic_extractor.py  base.py  registry.py
tests/: conftest.py  test_comparison.py  test_config.py  test_discovery.py  test_ground_truth.py  test_ingest.py  test_label_maps.py  test_models.py  test_prompt_generator.py  test_pt_rules.py  test_run_manifest.py  test_validation.py
tests/backends/: test_mock_backend.py
tests/extractors/: test_anthropic_extractor.py  test_base.py  test_registry.py
